Editor no longer has scrollbars

--- a/editor/static/editor/css/editor.css
+++ b/editor/static/editor/css/editor.css
@@ -1,8 +1,3 @@
-canvas {
-    margin: 0px auto;
-    border: 1px solid black;
-}
-
 #palette {
     border: 5px ridge;
     padding: 10px;
